{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "CarControls",
            "id": "2b42633d-25fa-429b-98fa-2549b7d1ebee",
            "actions": [
                {
                    "name": "CarMovement",
                    "type": "Value",
                    "id": "e18db7cd-a5fa-44aa-a9b0-185ba7ab9d08",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "96ebf9ad-fe15-4ece-9abd-6c343cf96cb8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CarMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "71f8cb71-441c-462d-9c0a-b0bd4d8ada52",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CarMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8ddce2fe-a6ce-4a3f-8d3b-a5b0dbfce6e9",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CarMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "51d839ae-33ea-4ac4-ac4b-a52ca692713e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CarMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3b313a41-92aa-48f1-896b-19884ead9eb6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CarMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "ShootingControls",
            "id": "bc8088b7-afbc-4146-873a-c141633d8080",
            "actions": [
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "2b77270d-24ed-42ce-9c74-94baedcec985",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5f2e9c3f-7c18-4852-b6a9-fa195f5fbc33",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}